--- a/.github/workflows/trigger-colab.yml
+++ b/.github/workflows/trigger-colab.yml
@@ -2,22 +2,28 @@ name: Auto Trigger Colab
 
 on:
   schedule:
-    - cron: "5 */12 * * *"   # every 12 hours + 5 min
-  workflow_dispatch:          # manual trigger option
+    - cron: "1 */12 * * *"  # Har 12 ghante + 5 minutes
+  workflow_dispatch:        # Manual run bhi allow
 
 jobs:
-  run-colab:
+  run:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install Dependencies
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y chromium-browser chromium-chromedriver
+          sudo apt-get install -y google-chrome-stable
+          python -m pip install --upgrade pip
           pip install selenium
 
-      - name: Trigger Colab Notebook
+      - name: Run Controller
         run: python controller.py
+
