--- a/.github/workflows/trigger-colab.yml
+++ b/.github/workflows/trigger-colab.yml
@@ -2,8 +2,8 @@ name: Trigger Colab Notebook
 
 on:
   schedule:
-    - cron: "5 */12 * * *"   # 🔄 Every 12 hours + 5 mins
-  workflow_dispatch:          # 🔄 Manual trigger option
+    - cron: "5 */12 * * *"
+  workflow_dispatch:
 
 jobs:
   run-colab:
@@ -18,12 +18,24 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install Chrome & Chromedriver
         run: |
-          pip install selenium
+          sudo apt-get update
+          sudo apt-get install -y wget unzip xvfb
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '[0-9]+')
+          echo "Installed Chrome: $CHROME_VERSION"
+          wget -N https://chromedriver.storage.googleapis.com/$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip -d /usr/local/bin/
+          chmod +x /usr/local/bin/chromedriver
 
-      - name: Run controller.py
-        run: python controller.py
+      - name: Install dependencies
+        run: pip install selenium
+
+      - name: Run controller.py with Xvfb (virtual display)
+        run: |
+          xvfb-run -a python controller.py
 
       - name: Upload Screenshot (before run)
         uses: actions/upload-artifact@v4
@@ -36,3 +48,4 @@ jobs:
         with:
           name: colab-screenshot-after
           path: colab_screen_after.png
+
